@@ -52,9 +52,9 @@
 
 /* And these macros perform the inverse transformation */
 
-#define RBG24RED(rgb)   (((rgb) >> 16) & 0xff)
-#define RBG24GREEN(rgb) (((rgb) >> 8)  & 0xff)
-#define RBG24BLUE(rgb)  ( (rgb)        & 0xff)
+#define RGB24RED(rgb)   (((rgb) >> 16) & 0xff)
+#define RGB24GREEN(rgb) (((rgb) >> 8)  & 0xff)
+#define RGB24BLUE(rgb)  ( (rgb)        & 0xff)
 
 /* This macro creates RGB16 (5:6:5) from 8:8:8 RGB:
  *
@@ -68,9 +68,9 @@
 
 /* And these macros perform the inverse transformation */
 
-#define RBG16RED(rgb)   (((rgb) >> 8) & 0xf8)
-#define RBG16GREEN(rgb) (((rgb) >> 3) & 0xfc)
-#define RBG16BLUE(rgb)  (((rgb) << 3) & 0xf8)
+#define RGB16RED(rgb)   (((rgb) >> 8) & 0xf8)
+#define RGB16GREEN(rgb) (((rgb) >> 3) & 0xfc)
+#define RGB16BLUE(rgb)  (((rgb) << 3) & 0xf8)
 
 /* This macro creates RGB8 (3:3:2) from 8:8:8 RGB */
 
@@ -79,9 +79,9 @@
 
 /* And these macros perform the inverse transformation */
 
-#define RBG8RED(rgb)    ( (rgb)       & 0xe0)
-#define RBG8GREEN(rgb)  (((rgb) << 3) & 0xe0)
-#define RBG8BLUE(rgb)   (((rgb) << 6) & 0xc0)
+#define RGB8RED(rgb)    ( (rgb)       & 0xe0)
+#define RGB8GREEN(rgb)  (((rgb) << 3) & 0xe0)
+#define RGB8BLUE(rgb)   (((rgb) << 6) & 0xc0)
 
 /* This macro converts RGB24 (8:8:8) to RGB16 (5:6:5):
  *
